@@ -16,6 +16,7 @@
 package io.github.microcks.util.metadata;
 
 import io.github.microcks.domain.Operation;
+import io.github.microcks.domain.ParameterConstraint;
 import io.github.microcks.domain.Service;
 import io.github.microcks.util.DispatchStyles;
 import io.github.microcks.util.MockRepositoryImportException;
@@ -51,7 +52,7 @@ class MetadataImporterTest {
          fail("Exception should not be thrown");
       }
       assertEquals(1, services.size());
-      Service service = services.get(0);
+      Service service = services.getFirst();
       assertEquals("HelloService", service.getName());
       assertEquals("v1", service.getVersion());
 
@@ -61,11 +62,56 @@ class MetadataImporterTest {
       assertEquals("Team A", service.getMetadata().getLabels().get("team"));
 
       assertEquals(1, service.getOperations().size());
-      Operation operation = service.getOperations().get(0);
+      Operation operation = service.getOperations().getFirst();
 
       assertEquals("POST /greeting", operation.getName());
       assertEquals(Long.valueOf(100), operation.getDefaultDelay());
       assertEquals(DispatchStyles.JSON_BODY, operation.getDispatcher());
       assertNotNull(operation.getDispatcherRules());
+   }
+
+   @Test
+   void testAPIMetadataWithParmaeterConstraintsImport() {
+      MetadataImporter importer = null;
+      try {
+         importer = new MetadataImporter(
+               "target/test-classes/io/github/microcks/util/metadata/APIPastry-2.0-metadata.yml");
+      } catch (IOException ioe) {
+         fail("Exception should not be thrown");
+      }
+
+      // Check that basic service properties are there.
+      List<Service> services = null;
+      try {
+         services = importer.getServiceDefinitions();
+      } catch (MockRepositoryImportException e) {
+         fail("Exception should not be thrown");
+      }
+      assertEquals(1, services.size());
+      Service service = services.getFirst();
+      assertEquals("API Pastry - 2.0", service.getName());
+      assertEquals("2.0.0", service.getVersion());
+
+      assertEquals(1, service.getOperations().size());
+      Operation operation = service.getOperations().getFirst();
+
+      assertEquals("GET /pastry/{name}", operation.getName());
+      assertEquals(Long.valueOf(100), operation.getDefaultDelay());
+      assertNotNull(operation.getParameterConstraints());
+      assertEquals(2, operation.getParameterConstraints().size());
+
+      for (ParameterConstraint constraint : operation.getParameterConstraints()) {
+         if ("Authorization".equals(constraint.getName())) {
+            assertTrue(constraint.isRequired());
+            assertFalse(constraint.isRecopy());
+            assertEquals("^Bearer\\s[a-zA-Z0-9\\._-]+$", constraint.getMustMatchRegexp());
+         } else if ("x-request-id".equals(constraint.getName())) {
+            assertTrue(constraint.isRequired());
+            assertTrue(constraint.isRecopy());
+            assertNull(constraint.getMustMatchRegexp());
+         } else {
+            fail("Unexpected parameter constraint");
+         }
+      }
    }
 }
